Tue Sep 14 22:01:49 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: New option --disable-visibility to disable
	the use of ELF visibility attributes for PLT reduction.

	* gtk/makegtkalias.pl: 
	* gdk/makegdkalias.pl: Respect the DISABLE_VISIBILITY
	define.

Tue Sep 14 23:20:56 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkaction.c (connect_proxy): Call
	gtk_tool_item_rebuild_menu().

	* gtk/gtktoolitem.c (gtk_tool_item_class_init): Update
	documentation for GtkToolItem::create_menu_proxy.

	* gtk/gtktoolitem.c (gtk_tool_item_rebuild_menu): New
	API to make the toolbar update itself when the proxy menu item
	for a tool item changes.

	* gtk/gtktoolbutton.c (gtk_tool_button_construct_contents): Call
	gtk_tool_item_rebuild_menu here()

	* gtk/gtktoolbutton.c (gtk_tool_button_construct_contents):
	Remove redundant check for need_label.

2004-09-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmain.c (do_post_parse_initialization): Remove an unused 
	variable, spotted by Morten Welinder.

	* gtk/queryimmodules.c (escape_string): Copy code from queryloaders.c
	which turns backslashes in slashes on win32.  (#152608, Kazuki IWAMOTO)

	* gtk/gtktreeview.c (gtk_tree_view_focus_to_cursor): Set the cursor
	to the first selected row instead of always to the first row if there
	is no cursor.  (#143270, Jean Bréfort)

	* tests/testfilechooser.c (main): Fix a few typos.

2004-09-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkexpander.c: 
	* gtk/gtktreeview.c: Change the default expander size to 12 to compensate 
	for the recent change to gtk_default_draw_expander().

	* gtk/gtkstyle.c (gtk_default_draw_expander): Use a linewidth of one
	for expander sizes up to 16.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_get_model): Resize the
	popup if the model is replaced.  (#152333)

Mon Sep 13 09:11:53 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtkrange.c: fix gtk_range_real_change_value args. Addresses part
	of #152518.
